--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
-    <link rel="stylesheet" href="https://github.com/trulyaman25/Netflix-Clone/blob/3eed6094810e5fc054562b2200aed92bd0aad46a/styles.css">
-    <link rel="icon" type="image/x-icon" href="https://github.com/trulyaman25/Netflix-Clone/blob/3eed6094810e5fc054562b2200aed92bd0aad46a/assets/images/favicon.ico">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
 
 <body>
